# password-manager-rust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/application/: mod.rs  password_manager.rs
src/cli/: commands.rs  interactive.rs
src/domain/: password.rs
src/infrastructure/: encryption.rs  storage.rs
src/usecases/: password_manager.rs
tests/: integration_test.rs
